# tantivy-sqlite-storage

./: Cargo.toml  README.md
examples/: basic_search.rs
src/: lib.rs
