[package]
name = "tantivy-sqlite-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.18"
rusqlite = { version = "0.28", features = ["blob"] }
r2d2_sqlite = "0.21"
r2d2 = "0.8"
thiserror = "1"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4", "fast-rng"] }