[package]
name = "tantivy-sqlite-storage"
description = "Allows tantivy data to be stored in sqlite rather than files on disk"
documentation = "https://docs.rs/tantivy-sqlite-storage"
readme = "README.md"
repository = "https://github.com/gwilymk/tantivy-sqlite-storage"
license = "MIT OR Apache-2.0"
keywords = ["tantivy", "sqlite"]
version = "0.1.0"
edition = "2021"
authors = ["Gwilym Kuiper <email@gwilym.dev>"]

[dependencies]
tantivy = { version = "0.18", default_features = false }
rusqlite = { version = "0.28", features = ["blob"] }
r2d2_sqlite = "0.21"
r2d2 = "0.8"
thiserror = "1"
parking_lot = "0.12"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4", "fast-rng"] }